--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
     "type": "project",
     "license": "proprietary",
+    "name": "pierreboissinot/changelog",
+    "description": "Helps you to manage changelog",
+    "authors": [
+        {
+            "name": "Pierre Boissinot",
+            "email": "perso@pierreboissinot.me"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
