--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "emlynwest/changelog": "^1.2",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
