--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "ext-iconv": "*",
         "emlynwest/changelog": "^1.2",
         "symfony/console": "^3.4",
+        "symfony/finder": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
