--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.12",
         "symfony/dotenv": "^4.1"
     },
     "config": {
