--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/finder": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
+        "symfony/lock": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/yaml": "^4.1"
     },
