--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/console": "^3.4|~4.0",
         "symfony/finder": "^4.1",
         "symfony/flex": "^1.0",
-        "symfony/lock": "^3.4|~4.1"
+        "symfony/lock": "^4.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.12",
