--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "emlynwest/changelog": "^1.2",
-        "symfony/console": "^3.4|~4.0",
-        "symfony/finder": "^4.1",
+        "symfony/console": "^3.0 || ^4.0",
+        "symfony/finder": "^3.0 || ^4.0",
         "symfony/flex": "^1.0",
-        "symfony/lock": "^4.1"
+        "symfony/lock": "^3.0 || ^4.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.12",
