--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         },
         "sort-packages": true
     },
+    "bin": ["changelog.php"],
     "autoload": {
         "psr-4": {
             "App\\": "src/"
