--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "type": "library",
     "license": "MIT",
-    "name": "pierreboissinot/changelog",
-    "homepage": "https://github.com/pierreboissinot/changelog",
+    "name": "pierreboissinot/changelog-helper",
+    "homepage": "https://github.com/pierreboissinot/changelog-helper",
     "description": "Helps you to manage changelog",
     "authors": [
         {
@@ -32,7 +32,7 @@
         },
         "sort-packages": true
     },
-    "bin": ["changelog.php"],
+    "bin": ["changelog-helper.php"],
     "autoload": {
         "psr-4": {
             "App\\": "src/"
